syntax = "proto3";
package alliance;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/terra-money/alliance/x/alliance/types";

service Msg {
  rpc Delegate(MsgDelegate) returns (MsgDelegateResponse);
  rpc Redelegate(MsgRedelegate) returns(MsgRedelegateResponse);
  rpc Undelegate(MsgUndelegate) returns(MsgUndelegateResponse);
  rpc ClaimDelegationRewards(MsgClaimDelegationRewards) returns(MsgClaimDelegationRewardsResponse);
}

message MsgDelegate {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address = 1;
  string                   validator_address = 2;
  cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}
message MsgDelegateResponse {}

message MsgUndelegate {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address = 1;
  string                   validator_address = 2;
  cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}

message MsgUndelegateResponse {}

message MsgRedelegate {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address = 1;
  string                   validator_src_address = 2;
  string                   validator_dst_address = 3;
  cosmos.base.v1beta1.Coin amount = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}

message MsgRedelegateResponse {}

message MsgClaimDelegationRewards {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  string                   delegator_address = 1;
  string                   validator_address = 2;
  string                   denom = 3;
}

message MsgClaimDelegationRewardsResponse {}
